ading and changing colors/imgs

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    background: rgb(125, 198, 205);
-    color: rgb(45, 45, 45);
+    background: rgb(86, 255, 114);
+    color: rgb(180, 12, 12);
     padding: 10px;
     font-family: arial;
     margin: auto;
@@ -12,7 +12,7 @@ body {
 
 /* navigation menu */
 nav {
-    background: rgb(239, 80, 41);
+    background: rgb(35, 223, 198);
    margin: 0 auto;margin-bottom: 20px;
     display: flex;
     padding: 10px;
@@ -20,7 +20,7 @@ nav {
 h1 {
     display: flex;
     align-items: center;
-    color: white;
+    color: rgb(173, 36, 36);
     flex: 1;
     margin: 0;
 }
@@ -33,12 +33,12 @@ h1 {
 }
 a {
     text-decoration: none;
-    color: #fff;
+    color: #961f1f;
 }
 
 /* main container area beneath menu */
 main {
-    background: rgb(245, 238, 219);
+    background: rgb(182, 140, 27);
     display: flex;
 }
 .sidebar {
@@ -63,7 +63,7 @@ h2, h3 {
 }
 /* portfolio styles */
 .content h1 {
-    color: black;
+    color: rgb(221, 87, 255);
 }
 
 #portfolio {
@@ -84,7 +84,7 @@ h2, h3 {
 
 #portfolio a {
     text-decoration: none;
-    color: #454545;
+    color: #b62525;
 }
 /* responsive web design */
 @media screen and (min-width: 120px) and (max-width: 1080px) {
