--- a/asd-projects/debugging-exercise/index.css
+++ b/asd-projects/debugging-exercise/index.css
@@ -1,16 +1,16 @@
 #board {
-    background: black;
-    width: 300px;
-    height: 300px;
-    left: 0px;
-    top: 0px;
+    background: rgb(155, 206, 13);
+    width: 1416px;
+    height: 884px;
+    left: 10px;
+    top: 10px;
 }
 
 
 .circle {
-    background: blue;
-    width: 20px;
-    height: 20px;
+    background: rgb(0, 0, 0);
+    width: 15px;
+    height: 100px;
     border-radius: 10px;
     position: absolute;
 }
