--- a/asd-projects/walker/index.css
+++ b/asd-projects/walker/index.css
@@ -17,6 +17,11 @@ body {
   height: 50px;
   position: absolute;
   border-radius: 50px;
-/*   left: 100px; */  /* Uncomment if you want to set a "starting" position */
-/*   top: 100px;  */  /* Uncomment if you want to set a "starting" position */
+}
+#ball {
+  background-color: rgb(255, 0, 0);
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  border-radius: 50px;
 }
